# remsg-editor

./: .env  .gitignore  .npmrc  .prettierignore  .prettierrc  CNAME  README.md  eslint.config.js  index.html  manifest.webmanifest  package.json  pnpm-lock.yaml  sw.js  tsconfig.json  unocss.config.ts  vite.config.ts
.github/: renovate.json5
.github/workflows/: ci.yaml  ci.yml  server.yml
assets/: base64-js-B3UBCJxE.js  buffer-FAyrCndp.js  ieee754-DOT7_fXj.js  index-3tT9By5i.js  index-B1EjjrHN.css  index-B7Oind9q.css  index-B8jY468D.js  index-BZX12Gfw.css  index-BZxlyYGI.js  index-BgndnutR.js  index-BsQ_Y23c.js  index-Bv7YxHfy.css  index-BvgTMLHI.js  index-Bz9w6lxo.js  index-C83ythyK.css  index-C9d9ZyfA.js  index-CBY7g-pU.js  index-CIE0CwiV.css  index-CMGvm5TV.js  index-CRIFzGhG.css  index-CTytih6D.js  index-CZZQLVKR.js  index-CdXuR2SR.css  index-CeLouFAd.js  index-CfTK7HIp.js  index-Cj5n9izj.js  index-CpjBqjyE.css  index-CqcJ9lqV.css  index-D0NpOWmA.css  index-D5_iij5K.js  index-D69YO6IV.js  index-D8Who7GC.js  index-DFN2KJUK.js  index-DKsniA_u.css  index-DMbzQ0Fe.js  index-DcyQ2giI.css  index-DnJF-RDt.css  index-DoDMWKxq.css  index-Du-fcTwO.js  index-E1W45I6l.css  (+37 more)
src/: app.svelte  app.vue  entry.svelte  global.d.ts  main.ts  state.svelte.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/src/: main.rs
